RESOLVED FIXED138172
FormDataBuilder should not use Document
https://bugs.webkit.org/show_bug.cgi?id=138172
Summary FormDataBuilder should not use Document
Carlos Garcia Campos
Reported 2014-10-29 07:35:43 PDT
It's a layering violation.
Attachments
Patch (4.45 KB, patch)
2014-10-29 07:38 PDT, Carlos Garcia Campos
ap: review+
Carlos Garcia Campos
Comment 1 2014-10-29 07:38:11 PDT
Alexey Proskuryakov
Comment 2 2014-10-30 00:08:14 PDT
Comment on attachment 240600 [details] Patch Nice!
Carlos Garcia Campos
Comment 3 2014-10-30 01:02:25 PDT
Note You need to log in before you can comment on or make changes to this bug.