Source/WebCore/platform/network/FormDataBuilder.h
@@ -26,14 +26,11 @@
 
 namespace WebCore {
 
-class Document;
 class TextEncoding;
 
 class FormDataBuilder {
     WTF_MAKE_NONCOPYABLE(FormDataBuilder);
 public:
-    static TextEncoding encodingFromAcceptCharset(const String& acceptCharset, Document&);
-
     // Helper functions used by HTMLFormElement for multi-part form data
     static Vector<char> generateUniqueBoundaryString();
     static void beginMultiPartHeader(Vector<char>&, const CString& boundary, const CString& name);
